--- a/src/pages/Profile/up.styles.scss
+++ b/src/pages/Profile/up.styles.scss
@@ -9,7 +9,7 @@
   height: 30rem;
   margin: 80px auto;
   display: flex;
-
+  background-color: white;
   justify-content: center;
   border: 3px solid #13e48225;
   padding: 1.5rem;
@@ -20,7 +20,7 @@
   width: 300px;
   height: 100%;
   position: relative;
-  background-color: #ffffff;
+  background-color: var(--bg-color);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -49,7 +49,8 @@
 
     padding-left: 0.5rem;
     padding-right: 0.5rem;
-    background: linear-gradient(rgba(255, 255, 255, 0.178), rgb(19, 19, 19));
+    background: var(--bg-color);
+
     .up-p-tag {
       font-family: "Poppins", sans-serif;
       cursor: pointer;
@@ -88,7 +89,7 @@
   height: 100%;
   overflow-y: auto;
   padding-left: 1.5rem;
-  background-color: #ffffff;
+  background-color: var(--bg-color);
   &::-webkit-scrollbar {
     width: 8px;
   }
@@ -256,7 +257,7 @@
     }
     .up-sidebar-details {
       width: 100%;
-      background: white;
+      background-color: var(--bg-color);
       margin-top: 2rem;
 
       padding: 0;
@@ -306,13 +307,13 @@
     }
     .up-sidebar-details {
       width: 100%;
-      background: white;
+      background-color: var(--bg-color);
       margin-top: 2rem;
       position: relative;
       bottom: 0rem;
       padding: 0;
       .up-p-tag {
-        color: black;
+        color: var(--primary-color);
         font-weight: 500;
         &:hover {
           color: rgba(0, 0, 0, 0.753);
