--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -46,6 +46,22 @@
   button {
     @include button();
   }
+  .toogle-mode {
+    width: 40px;
+    height: 50px;
+    position: relative;
+    .sun-svg {
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-35%);
+    }
+    #checkbox {
+      width: 100%;
+    }
+  }
 }
 .select-dropdown {
   width: 12rem;
@@ -178,7 +194,7 @@
       font-weight: 500;
       border-bottom: 3px solid rgba(211, 211, 211, 0);
       cursor: pointer;
-
+      color: var(--primary-color);
       a {
         display: flex;
         align-items: center;
