--- a/src/constant.styles.scss
+++ b/src/constant.styles.scss
@@ -21,6 +21,7 @@
 .dropdown-item-icon {
   cursor: pointer;
   transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+  color: var(--primary-color);
   &:hover {
     color: #039c55;
   }
