--- a/src/pages/Item/item.styles.scss
+++ b/src/pages/Item/item.styles.scss
@@ -74,7 +74,7 @@
     position: relative;
     width: 100%;
     height: 3.2rem;
-    background-color: rgba(255, 255, 255, 0.829);
+    background-color: var(--item-post-likes);
     border-radius: 10px;
     margin-top: 0.8rem;
     padding: 0;
@@ -82,40 +82,40 @@
     justify-content: flex-start;
     align-items: center;
     filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.021));
-    border: 2px solid #34f1991e;
+    border: 2px solid var(--item-post-likes-border);
 
     span {
       margin: 0 1.4rem;
       display: flex;
       align-items: center;
       justify-content: center;
-      color: rgb(0, 0, 0);
+      color: var(--primary-color);
     }
     .itempostlikeicon {
       font-size: 1.2rem;
       margin-right: 0.5rem;
       cursor: pointer;
-      color: rgba(0, 0, 0, 0.918);
+      color: var(--primary-color);
       transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
       &:hover {
-        color: rgb(5, 5, 5);
+        fill: var(--field-header-green);
       }
       &:active {
         transform: scale(1.4);
       }
     }
     .itempostlikeiconactive {
-      color: rgba(0, 0, 0, 0.966);
+      color: var(--like-color);
     }
     .itempostdislikeicon {
       font-size: 1.2rem;
       cursor: pointer;
       margin-left: 0.5rem;
       margin-right: 0rem;
-      color: rgba(0, 0, 0, 0.918);
+      color: var(--primary-color);
       transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
       &:hover {
-        color: rgb(216, 61, 61);
+        fill: rgb(216, 61, 61);
       }
       &:active {
         transform: scale(1.4);
@@ -138,7 +138,7 @@
       background: #00000002;
       border-radius: 50%;
       cursor: pointer;
-      color: #000000a1;
+      color: var(--primary-color);
       &:active {
         animation: favAnimateout 0.7s cubic-bezier(0.19, 1, 0.22, 1);
       }
@@ -150,13 +150,13 @@
     .edit-icon-div {
       a {
         text-decoration: none;
-        color: black;
+        color: var(--primary-color);
         .item-edit-icon {
           font-size: 1.1rem;
           padding: 0.4rem;
 
           cursor: pointer;
-          color: #000000a1;
+          color: var(--primary-color);
           &:active {
             animation: favAnimateout 0.7s cubic-bezier(0.19, 1, 0.22, 1);
           }
@@ -170,11 +170,11 @@
     .item-fav {
       margin-left: 1rem;
       .fav-icon {
-        background: #00000002;
+        background: var(--icon-bg-color);
         border-radius: 50%;
         font-size: 1.05rem;
         padding: inherit;
-        color: #ff210438;
+        color: #ff210469;
         cursor: pointer;
         padding: 0.5rem;
         animation: favAnimateout 0.7s cubic-bezier(0.19, 1, 0.22, 1);
@@ -206,11 +206,14 @@
       width: 100%;
       display: block;
       text-decoration: underline;
+      &:hover {
+        color: #02be66;
+      }
     }
     margin-top: 2rem;
     h1 {
       font-size: 1.6rem;
-      color: rgba(2, 2, 2, 0.726);
+      color: var(--field-header-h1);
       font-weight: 600;
       margin-bottom: 0.8rem;
       sub {
@@ -223,6 +226,7 @@
       font-size: 0.95rem;
       font-weight: 400;
       line-height: 1.9;
+      color: var(--primary-color);
     }
   }
 }
