--- a/src/pages/Profile/up.styles.scss
+++ b/src/pages/Profile/up.styles.scss
@@ -9,9 +9,9 @@
   height: 30rem;
   margin: 80px auto;
   display: flex;
-  background-color: white;
+  background-color: var(--bg-color);
   justify-content: center;
-  border: 3px solid #13e48225;
+  border: 3px solid var(--item-post-likes-border);
   padding: 1.5rem;
   border-radius: 15px;
   box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.048);
@@ -28,6 +28,8 @@
   border-right: 2px solid rgba(0, 0, 0, 0.062);
   padding-right: 0rem;
   overflow: hidden;
+  border-radius: 10px;
+
   .up-profile-img {
     width: 100%;
     height: 100%;
@@ -49,7 +51,7 @@
 
     padding-left: 0.5rem;
     padding-right: 0.5rem;
-    background: var(--bg-color);
+    background: linear-gradient(black, rgba(19, 18, 18, 0.726));
 
     .up-p-tag {
       font-family: "Poppins", sans-serif;
@@ -109,7 +111,7 @@
 .up-userPost-box {
   width: 80%;
 
-  background-color: white;
+  background-color: var(--bg-color);
   padding: 0.3rem 0.8rem;
   padding-left: 1rem;
   margin: 30px 0;
@@ -119,13 +121,13 @@
   font-family: "Poppins", sans-serif;
   position: relative;
   transition: 0.5s cubic-bezier(0.19, 1, 0.22, 1);
-  border: 2px solid #29c97e1e;
+  border: 2px solid var(--border-color);
   &:hover {
     border: 2px solid #d9f1e6;
   }
   .up-a-tag {
     text-decoration: none;
-    color: #000000;
+    color: var(--primary-color);
     &:hover {
       text-decoration: underline;
       color: #0c9143;
@@ -139,11 +141,13 @@
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+    color: var(--primary-color);
   }
   p {
     margin-top: 0.5rem;
     font-size: 0.9rem;
     margin-bottom: 1.5rem;
+    color: var(--primary-color);
   }
   .up-userpost-likes {
     margin-top: 1rem;
@@ -152,6 +156,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: var(--like-color);
     .up-likes {
       font-size: 0.95rem;
       display: flex;
@@ -160,7 +165,7 @@
     .up-like-icon {
       font-size: 1.1rem;
       margin-right: 0.35rem;
-      color: rgba(0, 0, 0, 0.671);
+      color: var(--like-color);
       cursor: pointer;
       &:hover {
         fill: #29c97e;
@@ -169,7 +174,7 @@
     .up-dislike-icon {
       margin-right: 0rem;
       margin-left: 0.35rem;
-      color: rgba(0, 0, 0, 0.671);
+      color: var(--like-color);
       &:hover {
         fill: #c92e2ea6;
       }
@@ -185,12 +190,12 @@
       .up-userpost-item-fav-icon {
         font-size: 1.05rem;
         padding: inherit;
-        background: #00000009;
+        color: var(--icon-bg-color);
         border-radius: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
-        color: #ff210438;
+        color: #ff210449;
         cursor: pointer;
         padding: inherit;
         animation: favAnimateout 0.7s cubic-bezier(0.19, 1, 0.22, 1);
@@ -257,15 +262,15 @@
     }
     .up-sidebar-details {
       width: 100%;
-      background-color: var(--bg-color);
+      background: var(--bg-color);
       margin-top: 2rem;
 
       padding: 0;
       .up-p-tag {
-        color: black;
+        color: var(--primary-color);
         font-weight: 500;
         &:hover {
-          color: rgba(0, 0, 0, 0.753);
+          color: var(--secondary-color);
         }
         &:hover .up-arraow-icon {
           transform: rotate(90deg);
@@ -307,7 +312,7 @@
     }
     .up-sidebar-details {
       width: 100%;
-      background-color: var(--bg-color);
+      background: var(--bg-color);
       margin-top: 2rem;
       position: relative;
       bottom: 0rem;
@@ -316,7 +321,7 @@
         color: var(--primary-color);
         font-weight: 500;
         &:hover {
-          color: rgba(0, 0, 0, 0.753);
+          color: var(--secondary-color);
         }
       }
     }
