--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -229,7 +229,7 @@
   .list-nav {
     ul {
       li {
-        margin: 0 0.5rem;
+        margin: 0 0.5rem 0.4rem;
       }
 
       li:nth-child(3),
