--- a/src/pages/Create/create.styles.scss
+++ b/src/pages/Create/create.styles.scss
@@ -4,9 +4,9 @@
   font-family: "Poppins", sans-serif;
   padding: 0.3rem 1.2rem 0.4rem;
 
-  border: 2px solid rgb(0, 0, 0);
+  border: 2px solid var(--primary-color);
   background-color: #00000000;
-  color: rgb(0, 0, 0);
+  color: var(--primary-color);
   font-weight: 500;
   font-size: 0.9rem;
   letter-spacing: 0.6px;
@@ -29,7 +29,7 @@
     transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
   }
   &:hover {
-    border: 2px solid rgba(0, 0, 0, 0.603);
+    border: 2px solid var(--login-btn-border);
     background: transparent;
     color: rgb(255, 255, 255);
   }
@@ -56,7 +56,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.89);
+  background-color: var(--image-progress);
   z-index: 40;
   .progress {
     width: 15rem;
@@ -68,6 +68,7 @@
       font-size: 1.1rem;
       text-align: center;
       margin-bottom: 1.25rem;
+      color: var(--home-h1-color);
     }
     .progress-span {
       display: none;
@@ -124,7 +125,7 @@
     font-weight: 500;
     margin-top: 1.4rem;
     margin-bottom: 0;
-    color: rgb(87, 87, 87);
+    color: var(--user-create-field);
     span {
       text-decoration: underline;
       color: #4dbc92;
@@ -136,6 +137,7 @@
     font-weight: 400;
     display: block;
     text-align: right;
+    color: var(--user-create-field);
   }
   .input-container {
     width: 100%;
@@ -145,7 +147,7 @@
       font-size: 1.05rem;
       font-weight: 400;
 
-      color: #00000077;
+      color: var(--create-label);
       letter-spacing: 0.5px;
     }
     input,
@@ -155,7 +157,7 @@
       display: block;
       width: 96%;
       transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
-      border: 2px solid rgba(0, 0, 0, 0.096);
+      border: 2px solid var(--auth-social-icon-border);
       font-family: "Poppins", sans-serif;
       letter-spacing: 0.6px;
       outline: 0;
@@ -163,9 +165,12 @@
       font-weight: 400;
       border-radius: 4px;
       box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.02);
+      background: var(--bg-color);
+      color: var(--primary-color);
       &::placeholder {
         font-size: 0.9rem;
         opacity: 1;
+        color: var(--paceholder-color);
       }
 
       &:-ms-input-placeholder {
@@ -228,7 +233,7 @@
     label {
       background-color: #18181800;
 
-      color: rgb(0, 0, 0);
+      color: var(--primary-color);
       font-weight: 500;
       width: 8rem;
       font-size: 0.85rem;
@@ -237,7 +242,7 @@
       display: inline-block;
       margin-bottom: 0;
       text-align: center;
-      border: 2px solid rgb(0, 0, 0);
+      border: 2px solid var(--primary-color);
       cursor: pointer;
       border-radius: 4px;
       box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.034);
@@ -260,16 +265,16 @@
         top: 0;
       }
       &:hover {
-        color: white;
+        color: var(--create-right-btn);
       }
       &:focus {
-        color: rgb(255, 255, 255);
+        color: var(--create-right-btn);
 
         background: transparent;
         border: 2px solid rgba(0, 0, 0, 0.623);
       }
       &:active {
-        color: rgb(255, 255, 255);
+        color: var(--create-right-btn);
 
         background: transparent;
         border: 2px solid rgba(0, 0, 0, 0.623);
