--- a/src/pages/Auth/auth.styles.scss
+++ b/src/pages/Auth/auth.styles.scss
@@ -4,7 +4,7 @@
   padding: 0.4rem 1.5rem;
 
   border: 2px solid rgba(0, 0, 0, 0);
-  background-color: #03923a;
+  background-color: #0bb64d;
   color: white;
   font-weight: 500;
   font-size: 0.95rem;
