--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -81,7 +81,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-
+    border-radius: 50%;
     cursor: pointer;
     &:focus {
       border: 2px solid #4dbc92;
@@ -258,8 +258,8 @@
   }
   .nav-profile {
     padding: 0;
-    width: 55px;
-    height: 55px;
+    width: 50px;
+    height: 50px;
     position: relative;
     right: 0.3rem;
   }
